src/main/java/gen/NuttParser.java
// Generated from G:/Nutt/src/main/java\NuttParser.g4 by ANTLR 4.12.0
package gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class NuttParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		AtSign=1, BackSlash=2, BackTick=3, BlockComment=4, Brace_Square_Left=5, 
		Brace_Square_Right=6, Brace_Curly_Left=7, Brace_Curly_Right=8, Brace_Paren_Left=9, 
		Brace_Paren_Right=10, Char_String=11, Colon=12, Comma=13, DecimalEscape=14, 
		Dot=15, EscapeCharacter=16, EscapeSequence=17, Float=18, HexEscape=19, 
		HexFloat=20, HexInt=21, Int=22, KW_Alias=23, KW_All=24, KW_Annotation=25, 
		KW_As=26, KW_Break=27, KW_Both=28, KW_Catch=29, KW_Prototype=30, KW_Continue=31, 
		KW_CommonOf=32, KW_Default=33, KW_Define=34, KW_Demand=35, KW_Deports=36, 
		KW_Do=37, KW_Doif=38, KW_Doifn=39, KW_Done=40, KW_Else=41, KW_End=42, 
		KW_Enum=43, KW_Eval=44, KW_Every=45, KW_Exec=46, KW_Exit=47, KW_Expose=48, 
		KW_False=49, KW_Final=50, KW_For=51, KW_Forget=52, KW_Funct=53, KW_Global=54, 
		KW_If=55, KW_Imports=56, KW_In=57, KW_Infix=58, KW_InstanceOf=59, KW_Is=60, 
		KW_Local=61, KW_Macro=62, KW_Match=63, KW_Matched=64, KW_Module=65, KW_Mut=66, 
		KW_Neither=67, KW_New=68, KW_Nil=69, KW_Not_In=70, KW_Of=71, KW_On=72, 
		KW_Outer=73, KW_Operator=74, KW_Param=75, KW_Postfix=76, KW_Prefix=77, 
		KW_Private=78, KW_Protected=79, KW_Public=80, KW_Record=81, KW_Repeat=82, 
		KW_Requires=83, KW_Return=84, KW_Reverse=85, KW_Then=86, KW_This=87, KW_To=88, 
		KW_Trait=89, KW_True=90, KW_Try=91, KW_Type=92, KW_TypeOf=93, KW_Until=94, 
		KW_Using=95, KW_Val=96, KW_Var=97, KW_Where=98, KW_While=99, KW_With=100, 
		KW_Yield=101, LineComment=102, NAME=103, NATIVE=104, OP_Add=105, OP_And=106, 
		OP_Append=107, OP_Assign=108, OP_Backward=109, OP_Case_Arrow=110, OP_Compose=111, 
		OP_Div=112, OP_Equal=113, OP_Extends=114, OP_Forward=115, OP_Greater=116, 
		OP_IntDiv=117, OP_Implements=118, OP_LambdaReturn=119, OP_Length=120, 
		OP_Less=121, OP_Less_Equal=122, OP_Mod=123, OP_Mult=124, OP_Not=125, OP_Or=126, 
		OP_Pass=127, OP_Placeholder=128, OP_Power=129, OP_Range=130, OP_Reverse=131, 
		OP_Similar=132, OP_SlightlyGreater=133, OP_SlightlyLess=134, OP_Sub=135, 
		OP_Tilda=136, OP_TypeAnnotation=137, OP_Underscore=138, OP_Xor=139, Op_Greater_Equal=140, 
		Op_Not_Equal=141, Op_Not_Similar=142, Op_Custom=143, Question=144, SHEBANG=145, 
		SemiColon=146, UtfEscape=147, WS=148, Normal_string=149;
	public static final int
		RULE_chunk = 0, RULE_module = 1, RULE_module_start = 2, RULE_module_name = 3, 
		RULE_module_require = 4, RULE_named_import = 5, RULE_named_import_list = 6, 
		RULE_module_import = 7, RULE_module_deport = 8, RULE_module_list = 9, 
		RULE_module_group = 10, RULE_module_name_or_group = 11, RULE_absolute_path = 12, 
		RULE_block = 13, RULE_qualified_name = 14, RULE_functiondef = 15, RULE_stat = 16, 
		RULE_macro_decl = 17, RULE_type_param = 18, RULE_template_type = 19, RULE_relation_type = 20, 
		RULE_type_param_list = 21, RULE_trait_def = 22, RULE_prototype_header = 23, 
		RULE_prototype_def = 24, RULE_access_modifier = 25, RULE_prototype_member = 26, 
		RULE_signature_def = 27, RULE_funct_signature = 28, RULE_type_def = 29, 
		RULE_record_def = 30, RULE_record_member = 31, RULE_record_member_list = 32, 
		RULE_using = 33, RULE_overloading_operator_param = 34, RULE_overloading_operator = 35, 
		RULE_operator_decl = 36, RULE_operator_qualifier = 37, RULE_annotation_decl = 38, 
		RULE_group_assignment = 39, RULE_do_done_block = 40, RULE_composed_assign = 41, 
		RULE_if_then_else_block = 42, RULE_then_block = 43, RULE_else_block = 44, 
		RULE_forget = 45, RULE_flat_name_list = 46, RULE_loop = 47, RULE_for_each_loop = 48, 
		RULE_while_do_loop = 49, RULE_repeat_until_loop = 50, RULE_op_direction = 51, 
		RULE_function_return = 52, RULE_function_yield = 53, RULE_try_catch = 54, 
		RULE_demand = 55, RULE_annotation = 56, RULE_var_signature = 57, RULE_var_decl = 58, 
		RULE_constant_qualifier = 59, RULE_type_flat_name = 60, RULE_alias_decl = 61, 
		RULE_type_annotation = 62, RULE_explist = 63, RULE_bracket_access = 64, 
		RULE_dot_access = 65, RULE_exp = 66, RULE_match_to = 67, RULE_array_initializer = 68, 
		RULE_array_element = 69, RULE_set_initializer = 70, RULE_range_array_initializer = 71, 
		RULE_comprehense_array_initializer = 72, RULE_map_element = 73, RULE_map_initializer = 74, 
		RULE_record_element = 75, RULE_record_element_list = 76, RULE_record_initializer = 77, 
		RULE_operator_logical = 78, RULE_default_match_branch = 79, RULE_match_branch = 80, 
		RULE_atom = 81, RULE_nil = 82, RULE_logic = 83, RULE_boolean = 84, RULE_number = 85, 
		RULE_int = 86, RULE_float = 87, RULE_string = 88, RULE_var_signature_list = 89, 
		RULE_vararg_or_signature = 90, RULE_func_output = 91, RULE_local_funct = 92, 
		RULE_funcbody = 93, RULE_lambda_decl = 94, RULE_operator_infix = 95, RULE_default_infix_operator = 96, 
		RULE_operator_composed = 97, RULE_operator_math = 98, RULE_operator_postfix = 99, 
		RULE_composed_assign_op = 100, RULE_operator_prefix = 101, RULE_operator_comparison = 102;
	private static String[] makeRuleNames() {
		return new String[] {
			"chunk", "module", "module_start", "module_name", "module_require", "named_import", 
			"named_import_list", "module_import", "module_deport", "module_list", 
			"module_group", "module_name_or_group", "absolute_path", "block", "qualified_name", 
			"functiondef", "stat", "macro_decl", "type_param", "template_type", "relation_type", 
			"type_param_list", "trait_def", "prototype_header", "prototype_def", 
			"access_modifier", "prototype_member", "signature_def", "funct_signature", 
			"type_def", "record_def", "record_member", "record_member_list", "using", 
			"overloading_operator_param", "overloading_operator", "operator_decl", 
			"operator_qualifier", "annotation_decl", "group_assignment", "do_done_block", 
			"composed_assign", "if_then_else_block", "then_block", "else_block", 
			"forget", "flat_name_list", "loop", "for_each_loop", "while_do_loop", 
			"repeat_until_loop", "op_direction", "function_return", "function_yield", 
			"try_catch", "demand", "annotation", "var_signature", "var_decl", "constant_qualifier", 
			"type_flat_name", "alias_decl", "type_annotation", "explist", "bracket_access", 
			"dot_access", "exp", "match_to", "array_initializer", "array_element", 
			"set_initializer", "range_array_initializer", "comprehense_array_initializer", 
			"map_element", "map_initializer", "record_element", "record_element_list", 
			"record_initializer", "operator_logical", "default_match_branch", "match_branch", 
			"atom", "nil", "logic", "boolean", "number", "int", "float", "string", 
			"var_signature_list", "vararg_or_signature", "func_output", "local_funct", 
			"funcbody", "lambda_decl", "operator_infix", "default_infix_operator", 
			"operator_composed", "operator_math", "operator_postfix", "composed_assign_op", 
			"operator_prefix", "operator_comparison"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'@'", "'\\'", "'`'", null, "'['", "']'", "'{'", "'}'", "'('", 
			"')'", null, "':'", "','", null, "'.'", null, null, null, null, null, 
			null, null, "'alias'", null, "'annotation'", "'as'", "'break'", "'both'", 
			"'catch'", "'proto'", "'continue'", "'commonof'", "'default'", "'define'", 
			"'demand'", "'deports'", "'do'", "'doif'", "'doifn'", "'done'", "'else'", 
			"'end'", "'enum'", "'eval'", "'every'", "'exec'", "'exit'", "'expose'", 
			null, "'final'", "'for'", "'forget'", "'funct'", "'global'", "'if'", 
			"'imports'", null, "'infix'", "'instanceof'", "'is'", "'local'", "'macro'", 
			"'match'", "'matched'", "'module'", "'mut'", "'neither'", "'new'", "'nil'", 
			null, "'of'", "'on'", "'outer'", "'operator'", "'param'", "'postfix'", 
			"'prefix'", "'private'", "'protected'", "'public'", "'record'", "'repeat'", 
			"'requires'", "'return'", "'reverse'", "'then'", "'this'", "'to'", "'trait'", 
			null, "'try'", "'type'", "'typeof'", "'until'", "'using'", "'val'", "'var'", 
			"'where'", "'while'", "'with'", "'yield'", null, null, "'$$.'", "'+'", 
			null, "';;'", "'='", null, "'-->'", "'<=='", null, null, "'<:'", null, 
			"'>'", "'//'", "'::'", "'==>'", "'#'", "'<'", null, "'%'", null, null, 
			null, "'...'", "'???'", "'^'", "'..'", "'<|>'", "'=='", "'~>'", "'<~'", 
			"'-'", "'~'", "'->'", "'_'", null, null, null, null, null, "'?'", null, 
			"';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "AtSign", "BackSlash", "BackTick", "BlockComment", "Brace_Square_Left", 
			"Brace_Square_Right", "Brace_Curly_Left", "Brace_Curly_Right", "Brace_Paren_Left", 
			"Brace_Paren_Right", "Char_String", "Colon", "Comma", "DecimalEscape", 
			"Dot", "EscapeCharacter", "EscapeSequence", "Float", "HexEscape", "HexFloat", 
			"HexInt", "Int", "KW_Alias", "KW_All", "KW_Annotation", "KW_As", "KW_Break", 
			"KW_Both", "KW_Catch", "KW_Prototype", "KW_Continue", "KW_CommonOf", 
			"KW_Default", "KW_Define", "KW_Demand", "KW_Deports", "KW_Do", "KW_Doif", 
			"KW_Doifn", "KW_Done", "KW_Else", "KW_End", "KW_Enum", "KW_Eval", "KW_Every", 
			"KW_Exec", "KW_Exit", "KW_Expose", "KW_False", "KW_Final", "KW_For", 
			"KW_Forget", "KW_Funct", "KW_Global", "KW_If", "KW_Imports", "KW_In", 
			"KW_Infix", "KW_InstanceOf", "KW_Is", "KW_Local", "KW_Macro", "KW_Match", 
			"KW_Matched", "KW_Module", "KW_Mut", "KW_Neither", "KW_New", "KW_Nil", 
			"KW_Not_In", "KW_Of", "KW_On", "KW_Outer", "KW_Operator", "KW_Param", 
			"KW_Postfix", "KW_Prefix", "KW_Private", "KW_Protected", "KW_Public", 
			"KW_Record", "KW_Repeat", "KW_Requires", "KW_Return", "KW_Reverse", "KW_Then", 
			"KW_This", "KW_To", "KW_Trait", "KW_True", "KW_Try", "KW_Type", "KW_TypeOf", 
			"KW_Until", "KW_Using", "KW_Val", "KW_Var", "KW_Where", "KW_While", "KW_With", 
			"KW_Yield", "LineComment", "NAME", "NATIVE", "OP_Add", "OP_And", "OP_Append", 
			"OP_Assign", "OP_Backward", "OP_Case_Arrow", "OP_Compose", "OP_Div", 
			"OP_Equal", "OP_Extends", "OP_Forward", "OP_Greater", "OP_IntDiv", "OP_Implements", 
			"OP_LambdaReturn", "OP_Length", "OP_Less", "OP_Less_Equal", "OP_Mod", 
			"OP_Mult", "OP_Not", "OP_Or", "OP_Pass", "OP_Placeholder", "OP_Power", 
			"OP_Range", "OP_Reverse", "OP_Similar", "OP_SlightlyGreater", "OP_SlightlyLess", 
			"OP_Sub", "OP_Tilda", "OP_TypeAnnotation", "OP_Underscore", "OP_Xor", 
			"Op_Greater_Equal", "Op_Not_Equal", "Op_Not_Similar", "Op_Custom", "Question", 
			"SHEBANG", "SemiColon", "UtfEscape", "WS", "Normal_string"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "NuttParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public NuttParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ChunkContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(NuttParser.EOF, 0); }
		public ModuleContext module() {
			return getRuleContext(ModuleContext.class,0);
		}
		public ChunkContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_chunk; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NuttParserVisitor ) return ((NuttParserVisitor<? extends T>)visitor).visitChunk(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ChunkContext chunk() throws RecognitionException {
		ChunkContext _localctx = new ChunkContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_chunk);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(207);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Char_String || _la==KW_Module || _la==Normal_string) {
				{
				setState(206);
				module();
				}
			}

			setState(209);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ModuleContext extends ParserRuleContext {
		public Module_startContext module_start() {
			return getRuleContext(Module_startContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode KW_End() { return getToken(NuttParser.KW_End, 0); }
		public List<Module_requireContext> module_require() {
			return getRuleContexts(Module_requireContext.class);
		}
		public Module_requireContext module_require(int i) {
			return getRuleContext(Module_requireContext.class,i);
		}
		public List<Module_importContext> module_import() {
			return getRuleContexts(Module_importContext.class);
		}
		public Module_importContext module_import(int i) {
			return getRuleContext(Module_importContext.class,i);
		}
		public ModuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NuttParserVisitor ) return ((NuttParserVisitor<? extends T>)visitor).visitModule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleContext module() throws RecognitionException {
		ModuleContext _localctx = new ModuleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_module);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(211);
			module_start();
			setState(215);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==KW_Requires) {
				{
				{
				setState(212);
				module_require();
				}
				}
				setState(217);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(221);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(218);
					module_import();
					}
					} 
				}
				setState(223);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(224);
			block();
			setState(225);
			match(KW_End);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Module_startContext extends ParserRuleContext {
		public StringContext description;
		public TerminalNode KW_Module() { return getToken(NuttParser.KW_Module, 0); }
		public TerminalNode NAME() { return getToken(NuttParser.NAME, 0); }
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public Module_startContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module_start; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NuttParserVisitor ) return ((NuttParserVisitor<? extends T>)visitor).visitModule_start(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Module_startContext module_start() throws RecognitionException {
		Module_startContext _localctx = new Module_startContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_module_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(228);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Char_String || _la==Normal_string) {
				{
				setState(227);
				((Module_startContext)_localctx).description = string();
				}
			}

			setState(230);
			match(KW_Module);
			setState(231);
			match(NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Module_nameContext extends ParserRuleContext {
		public List<TerminalNode> NAME() { return getTokens(NuttParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(NuttParser.NAME, i);
		}
		public List<TerminalNode> Dot() { return getTokens(NuttParser.Dot); }
		public TerminalNode Dot(int i) {
			return getToken(NuttParser.Dot, i);
		}
		public TerminalNode KW_As() { return getToken(NuttParser.KW_As, 0); }
		public Module_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module_name; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NuttParserVisitor ) return ((NuttParserVisitor<? extends T>)visitor).visitModule_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Module_nameContext module_name() throws RecognitionException {
		Module_nameContext _localctx = new Module_nameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_module_name);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(233);
			match(NAME);
			setState(238);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(234);
					match(Dot);
					setState(235);
					match(NAME);
					}
					} 
				}
				setState(240);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			setState(243);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(241);
				match(KW_As);
				setState(242);
				match(NAME);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Module_requireContext extends ParserRuleContext {
		public TerminalNode KW_Requires() { return getToken(NuttParser.KW_Requires, 0); }
		public Named_import_listContext named_import_list() {
			return getRuleContext(Named_import_listContext.class,0);
		}
		public Module_requireContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module_require; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NuttParserVisitor ) return ((NuttParserVisitor<? extends T>)visitor).visitModule_require(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Module_requireContext module_require() throws RecognitionException {
		Module_requireContext _localctx = new Module_requireContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_module_require);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(245);
			match(KW_Requires);
			setState(246);
			named_import_list();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
